--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray_f3f3f3">#f3f3f3</color>
     <color name="green_006400">#006400</color>
+    <color name="gray_7D7D7D">#7D7D7D</color>
 </resources>
