--- a/app/src/main/res/layout/item_mainlv_top.xml
+++ b/app/src/main/res/layout/item_mainlv_top.xml
@@ -13,9 +13,9 @@
             android:id="@+id/item_mainlv_top_tv1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/month_out"/>
+            android:text="@string/total"/>
         <TextView
-            android:id="@+id/item_mainlv_top_tv_out"
+            android:id="@+id/item_mainlv_top_tv_total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="￥ 0"
@@ -31,24 +31,24 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:src="@mipmap/ih_show"
-            android:layout_alignTop="@+id/item_mainlv_top_tv_out"/>
+            android:layout_alignTop="@+id/item_mainlv_top_tv_total"/>
         <TextView
             android:id="@+id/item_mainlv_top_tv2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/month_in"
-            android:layout_below="@id/item_mainlv_top_tv_out"/>
+            android:layout_below="@id/item_mainlv_top_tv_total"/>
         <TextView
             android:id="@+id/item_mainlv_top_tv_in"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:text="￥ 0"
-            android:layout_below="@id/item_mainlv_top_tv_out"
+            android:layout_below="@id/item_mainlv_top_tv_total"
             android:layout_toRightOf="@id/item_mainlv_top_tv2"
             android:layout_marginLeft="5dp"/>
         <TextView
-            android:id="@+id/item_mainlv_top_tv_budget"
+            android:id="@+id/item_mainlv_top_tv_out"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="￥ 0"
@@ -56,13 +56,14 @@
             android:layout_alignParentRight="true"
             android:layout_alignBottom="@id/item_mainlv_top_tv2"
             android:layout_marginLeft="5dp"/>
+
         <TextView
             android:id="@+id/item_mainlv_top_tv3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/budget"
-            android:layout_toLeftOf="@id/item_mainlv_top_tv_budget"
-            android:layout_alignBottom="@id/item_mainlv_top_tv2"/>
+            android:layout_alignBottom="@id/item_mainlv_top_tv2"
+            android:layout_toLeftOf="@id/item_mainlv_top_tv_out"
+            android:text="@string/month_out" />
         <TextView
             android:id="@+id/item_mainlv_top_tv4"
             android:layout_width="wrap_content"
