历史账单记录查看页面以及后续的完善工作

--- a/app/src/main/res/layout/fragment_outcome.xml
+++ b/app/src/main/res/layout/fragment_outcome.xml
@@ -53,8 +53,8 @@
         android:id="@+id/frag_record_keyboard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/gray_f3f3f3"
-        android:keyTextColor="@color/black"
+        android:background="@color/white"
+        android:keyTextColor="@color/white"
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:paddingTop="1dp"
