--- a/app/src/main/res/layout/dialog_time.xml
+++ b/app/src/main/res/layout/dialog_time.xml
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:text="@string/cancel"
             android:textColor="@color/white"
-            android:background="@null"
+            android:background="@drawable/main_recordbtn_bg"
             android:layout_marginRight="20dp"/>
         <Button
             android:id="@+id/dialog_time_btn_ensure"
@@ -57,7 +57,7 @@
             android:layout_height="wrap_content"
             android:text="@string/ensure"
             android:textColor="@color/white"
-            android:background="@null"
+            android:background="@drawable/main_recordbtn_bg"
             android:layout_marginRight="20dp"/>
     </LinearLayout>
 
