--- a/app/src/main/res/layout/item_mainlv.xml
+++ b/app/src/main/res/layout/item_mainlv.xml
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_marginLeft="10dp"
+        android:gravity="right"
         android:orientation="vertical">
         <TextView
             android:id="@+id/item_mainlv_tv_money"
